# laboratree

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2b6cb64d1aa9_papers_and_chunks.py  99285c349815_ideation_sessions.py  a1b2c3d4e5f6_persona_conditioning.py  a5b6c7d8e9f0_codebooks.py  b2c3d4e5f6a7_agent_experiences.py  b71477bc4b38_experiments.py  c7d8e9f0a1b2_persona_cohorts.py  d8e9f0a1b2c3_persona_graph.py  e9f0a1b2c3d4_gin_paper_chunks_fts.py  f0a1b2c3d4e5_agent_threads_runs.py
backend/laboratree/: __init__.py  main.py
backend/laboratree/agents/: __init__.py  lab_agent.py  pipeline.py  run_executor.py  supervisor.py
backend/laboratree/agents/cognitive/: __init__.py  goal.py  memory.py  meta_planner.py  reflection.py  specialists.py  verify.py
backend/laboratree/agents/deep/: __init__.py  critic.py  planner.py  prompts.py  react.py
backend/laboratree/agents/flow/: brain.py
backend/laboratree/agents/tools/: __init__.py  context_tools.py
backend/laboratree/api/: artifacts.py  blobs.py  components.py  datasets.py  deliverables.py  experiments.py  gates.py  lab_agents.py  media.py  orgs.py  personas.py  reports.py  runs.py  spiderweb.py
backend/laboratree/coding/: __init__.py
backend/laboratree/core/: browser.py  config.py  datasets.py  jobs.py  jsonparse.py  net.py  ratelimit.py  registry.py  repro.py  retrieval.py
backend/laboratree/core/db/: __init__.py  mongo.py  neo4j.py  redis.py
backend/laboratree/core/llm/: __init__.py  context.py  observability.py
backend/laboratree/core/notify/: __init__.py
backend/laboratree/core/search/: __init__.py
backend/laboratree/core/storage/: __init__.py
backend/laboratree/deliverables/: models.py
backend/laboratree/fieldwork/: models.py
backend/laboratree/labs/: __init__.py
backend/laboratree/media/: models.py
backend/laboratree/ocr/: base.py  service.py
backend/laboratree/panel/: __init__.py
backend/laboratree/papers/: __init__.py
backend/laboratree/personas/: __init__.py  models.py
backend/laboratree/projects/: models.py
backend/laboratree/scripts/: seed_demo.py
backend/laboratree/tenancy/: __init__.py
backend/tests/: conftest.py  test_llm_config.py  test_phase12_media.py  test_phase15_deliverables.py  test_phase16_behavioral.py  test_phase16_grounding.py  test_phase16_personas.py  test_phase18_flow.py  test_phase19_cache.py  test_phase19_supervisor.py  test_phase19_tools.py  test_phase20_cognitive.py  test_phase20_conditioning.py  test_phase20_lab_agents.py  test_phase20_retrieval.py  test_phase20_spiderweb.py  test_phase20_storage.py  test_phase4_signal.py  test_phase6_experiment.py  test_phase7_collection.py  test_phase7_ideation.py  test_phase7_redteam.py  test_phase7_trend_decision.py  test_phase9_lessons.py  test_smoke.py
mcp-servers/ocr-mcp/: README.md  pyproject.toml
mcp-servers/ocr-mcp/laboratree_ocr_mcp/: __init__.py  server.py
mcp-servers/search-mcp/: README.md  pyproject.toml
mcp-servers/search-mcp/laboratree_search_mcp/: __init__.py  retrieval.py  server.py
(+446 files in other folders)
