[project]
name = "laboratree-api"
version = "0.1.0"
description = "Laboratree FastAPI backend — agentic research lab."
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "email-validator>=2.1",
    "python-multipart>=0.0.9",
    # datastores
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "alembic>=1.13",
    "redis>=5.0",
    "neo4j>=5.20",
    "pymongo>=4.9",
    # jobs
    "celery>=5.4",
    # data (curated, non-sandboxed transforms/components run in-process)
    "pandas>=2.2",
    "numpy>=1.26",
    "openpyxl>=3.1",
    "scikit-learn>=1.4",
    "statsmodels>=0.14",
    # signal lab: multi-format extraction
    "pdfplumber>=0.11",
    "python-docx>=1.1",
    # ocr (engine binary gated at runtime; pypdfium2 comes via pdfplumber for rasterization)
    "pytesseract>=0.3.13",
    "pillow>=10.0",
    # llm + agents
    "openai>=1.40",
    "httpx>=0.27",
    "langgraph>=0.2.60",
    "langgraph-checkpoint-postgres>=2.0",
    "langchain-openai>=0.2",
    # sandbox code execution
    "docker>=7.1",
    # auth (used in Phase 2)
    "pyjwt>=2.8",
    "bcrypt>=4.1",
    # workspace
    "laboratree-plugin-sdk",
    "torch>=2.12.1",
    "xgboost>=3.3.0",
    "arch>=8.0.0",
    "litellm~=1.73.6",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "httpx>=0.27",
]

[tool.uv.sources]
laboratree-plugin-sdk = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["laboratree"]
