[project]
name = "laboratree-ocr-mcp"
version = "0.1.0"
description = "OCR + Document Intelligence as an MCP server — turn any document (PDF, scan, image, Office, HTML) into clean text, tables and markdown, consumable by any MCP client."
requires-python = ">=3.12,<3.13"
dependencies = [
    "mcp>=1.2.0",
    "laboratree-api",   # reuses the multi-format extractors + OCR engine + PDF text reader
]

[project.scripts]
laboratree-ocr-mcp = "laboratree_ocr_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["laboratree_ocr_mcp"]
